jenkinshelm/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jenkins
  creationTimestamp: null
  labels:
    app: jenkins
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jenkins
    spec:
      containers:
      - image: jenkins/jenkins:2.375.1-lts-centos7
        name: jenkins
        ports:
         - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 0
