jenkinshelm/templates/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: jenkins
  labels:
    app: jenkins
  namespace: jenkins
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
    - name: jenkins-port
      protocol: TCP
      port: 80
      targetPort: 8080
