jenkinshelm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: jenkins
  name: jenkins-ingress
  labels:
   app: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 300m
    nginx.org/client-max-body-size: "50m"
    cert-manager.io/cluster-issuer: letsencrypt-jenkins-dev
spec:
  defaultBackend:
     service:
       name: jenkins
       port: 
        number: 80
  rules:
    - host: jenkins.oneclickbazar.com ## Site name, I have tested with this site name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port: 
                  number: 80
  tls:
    - secretName: letsencrypt-jenkins-dev
      hosts:
       - jenkins.oneclickbazar.com
